--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -13,7 +13,7 @@
         </header>
           <p><b>{{ tile.description }}</b></p>
           <ul class="actions">
-            <li><a href="generic.html" class="button">Learn more</a></li>
+            <li><a href="{{ tile.url  | relative_url }}" class="button">Learn more</a></li>
           </ul>
         </div>
       </div>
