--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,27 +6,24 @@
 
     <body>
 
-        {% include header.html %}
+    {% include header.html %}
 
-        <section id="banner" class="style2">
-            <div class="inner">
-                <header class="major">
-
-                    <h1>{{ page.title }}</h1>
-
-                </header>
-                <div class="content">
-
-                    {{ page.description }}
-
-                </div>
+    <!-- Banner -->
+    <section id="banner" class="major">
+        <div class="inner">
+            <header class="major">
+                <h1>{{ page.title }}</h1>
+            </header>
+            <div class="content">
+                <p style="text-transform: uppercase;">{{ page.description }}</p>
             </div>
-        </section>
+        </div>
+    </section>
 
     {{ content }}
 
     {% include footer.html %}
 
-</body>
+    </body>
 
 </html>
